#
# Copyright (C) 2002 - 2018 Brailcom, o.p.s.
#
# This is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#

info_TEXINFOS = ssip.texi speech-dispatcher.texi spd-say.texi speech-dispatcher-cs.texi
EXTRA_DIST = figures

speech_dispatcher_TEXINFOS = gpl.texi fdl.texi speech-dispatcher.texi
speech_dispatcher_cs_TEXINFOS = gpl.texi fdl.texi speech-dispatcher-cs.texi
ssip_TEXINFOS = gpl.texi fdl.texi

CLEANFILES = spd-say.info \
	speech-dispatcher-cs.info \
	speech-dispatcher.info \
	ssip.info \
	stamp-1 \
	stamp-vti \
	version-2.texi \
	version.texi

-include $(top_srcdir)/git.mk
